# MatchMolecule

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
examples/: MatchMolecule_01.ovito  MatchMolecule_01.py  MatchMolecule_02.ovito  MatchMolecule_02.py  MatchMolecule_03.ovito  MatchMolecule_03.py
src/MatchMolecule/: __init__.py
tests/: test_modifier.py
