[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MatchMolecule"
version = "2025.1"
description = "Match parts of molecules using SMILES like query strings"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ovito >= 3.10.6",
    "networkx >= 3.0",
]

[project.urls]
repository = "https://github.com/ovito-org/MatchMolecule"

[project.entry-points.'OVITO.Modifier']
"Match Molecule" = "MatchMolecule:MatchMolecule"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]